--- a/src/components/Searchbar/searchbar.module.css
+++ b/src/components/Searchbar/searchbar.module.css
@@ -33,7 +33,7 @@
     width: 50px;
     height: 48px;
     border: 0;
-    background-image: url('../../search.png');
+    background-image: url('../Searchbar/search.png');
     background-size: 50%;
     background-repeat: no-repeat;
     background-position: center;
